Fixed some issues with scrollbar in playlist not showing up in firefox, and fixed error with height of main container when returning to frontpage from channel

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1476,9 +1476,9 @@ nav ul li:hover, nav ul li.active {
 
     #wrapper {
       height: 100%;
-      width: 113%;
+      width: 100%;
       overflow: auto;
-      padding-right: 5vh;
+      /*padding-right: 5vh;*/
       opacity: 1;
     }
 
